# Yxob

./: .gitignore  DNDSummarizer.lnk  README.md  audio_sink.py  discord_recorder.py  main.py  models.py  rc_main.py  requirements.txt  resources.qrc  setup_manager.py  workers.py  yxob_setup.ps1
DNDSummarizer_src/: CMakeLists.txt
DNDSummarizer_src/include/: dndsummarizer.h  sessionmanager.h  textprocessor.h
DNDSummarizer_src/qml/: Main.qml  OllamaSetup.qml
DNDSummarizer_src/qml/Singletons/: Colors.qml  UserSettings.qml
DNDSummarizer_src/src/: dndsummarizer.cpp  main.cpp  sessionmanager.cpp  textprocessor.cpp
qml/: Colors.qml  ConfigurationWindow.qml  Main.qml  SetupWindow.qml  TranscriptDialog.qml  UserExclusionDialog.qml  YxobSettings.qml  qmldir
summarizer-linux/lib64/: libQt6Core.so.6  libQt6DBus.so.6  libQt6EglFSDeviceIntegration.so.6  libQt6EglFsKmsGbmSupport.so.6  libQt6EglFsKmsGbmSupport.so.6.9.1  libQt6EglFsKmsSupport.so.6  libQt6EglFsKmsSupport.so.6.9.1  libQt6Gui.so.6  libQt6LabsFolderListModel.so.6  libQt6LabsQmlModels.so.6  libQt6Network.so.6  libQt6OpenGL.so.6  libQt6Qml.so.6  libQt6QmlCore.so.6  libQt6QmlCore.so.6.9.1  libQt6QmlMeta.so.6  libQt6QmlModels.so.6  libQt6QmlWorkerScript.so.6  libQt6Quick.so.6  libQt6QuickControls2.so.6  libQt6QuickControls2Basic.so.6  libQt6QuickControls2BasicStyleImpl.so.6  libQt6QuickControls2FluentWinUI3StyleImpl.so.6  libQt6QuickControls2FluentWinUI3StyleImpl.so.6.9.1  libQt6QuickControls2Fusion.so.6  libQt6QuickControls2FusionStyleImpl.so.6  libQt6QuickControls2Imagine.so.6  libQt6QuickControls2ImagineStyleImpl.so.6  libQt6QuickControls2Impl.so.6  libQt6QuickControls2Material.so.6  libQt6QuickControls2MaterialStyleImpl.so.6  libQt6QuickControls2Universal.so.6  libQt6QuickControls2UniversalStyleImpl.so.6  libQt6QuickDialogs2.so.6  libQt6QuickDialogs2QuickImpl.so.6  libQt6QuickDialogs2Utils.so.6  libQt6QuickEffects.so.6  libQt6QuickLayouts.so.6  libQt6QuickShapes.so.6  libQt6QuickTemplates2.so.6  (+3 more)
